--- a/web/package.json
+++ b/web/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "leaflet": "^1.6.0",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^12.12.46",
     "@types/react-leaflet": "^2.5.1"
   }
 }
